function getUserProfile pour récupérer l'utilisateur connecté, la fonction updateProfile pour modifier le profile de l'utilisateur connecté, création des middleware de sécurité: helmet, cors, rate-limiting

--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.0",
+    "rate-limit-mongo": "^2.3.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "yup": "^1.7.1"
