--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "dev": "nodemon server.js",
     "migrate": "node migrations/migrate.js",
     "seed": "node migrations/seed.js",
-    "test:unit": "NODE_ENV=test:unit mocha test/unit/**/*.js --timeout 5000 --exit",
-    "test:unit:auth": "NODE_ENV=test:unit mocha test/unit/authTest.js --timeout 5000 --exit",
-    "test:integration": "NODE_ENV=test mocha test/integration/**/*.js --timeout 10000 --exit"
+    "test": "NODE_ENV=test mocha test/setup.js test/**/*.test.js --timeout 5000 --exit",
+    "test:unit": "NODE_ENV=test:unit mocha test/setup.js test/unit/**/*.js --timeout 5000 --exit",
+    "test:unit:auth": "NODE_ENV=test:unit mocha test/setup.js test/unit/authTest.js --timeout 5000 --exit",
+    "test:integration": "NODE_ENV=test mocha test/setup.js test/integration/**/*.js --timeout 10000 --exit",
+    "test:integration:auth": "NODE_ENV=test mocha test/setup.js test/integration/authTest.js --timeout 10000 --exit"
   },
   "repository": {
     "type": "git",
