add integration test for product creation

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:unit:product": "cross-env NODE_ENV=test:unit mocha --no-config test/unit/productTest.js --timeout 5000 --exit",
     "test:unit:auth": "cross-env NODE_ENV=test:unit mocha --no-config test/unit/authTest.js --timeout 5000 --exit",
     "test:integration": "cross-env NODE_ENV=test mocha  --no-config test/integration/**/*.js --timeout 10000 --exit", 
-    "test:integration:auth": "cross-env NODE_ENV=test mocha --no-config test/setup.js test/integration/authTest.js --timeout 10000 --exit"
+    "test:integration:auth": "cross-env NODE_ENV=test mocha --no-config test/setup.js test/integration/authTest.js --timeout 10000 --exit",
+    "test:integration:product": "cross-env NODE_ENV=test mocha --no-config test/setup.js test/integration/productTest.js --timeout 10000 --exit"
   },
   "repository": {
     "type": "git",
