--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,19 @@ services:
       timeout: 10s
       retries: 5
       start_period: 10s
+  redis:
+    image: redis:7-alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+    networks:
+      - dev_net
+    command: redis-server --appendonly yes
+
+volumes:
+  redis-data:
 
 networks:
   dev_net:
