--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "test": "NODE_ENV=test mocha test/setup.js test/**/*.test.js --timeout 5000 --exit",
     "test:unit": "cross-env NODE_ENV=test:unit mocha test/setup.js test/unit/**/*.js --timeout 5000 --exit",
     "test:unit:cart": "cross-env NODE_ENV=test:unit mocha  --no-config test/unit/cartTest.js --timeout 5000 --exit",
+    "test:integration:cart": "cross-env NODE_ENV=test:unit mocha  --no-config test/integration/cartTest.js --timeout 5000 --exit",
     "test:unit:order": "cross-env NODE_ENV=test:unit mocha  --no-config test/unit/orderTest.js --timeout 5000 --exit",
+    "test:integration:order": "cross-env NODE_ENV=test:unit mocha  --no-config test/integration/orderTest.js --timeout 5000 --exit",
     "test:unit:auth": "cross-env NODE_ENV=test:unit mocha test/setup.js test/unit/authTest.js --timeout 5000 --exit",
     "test:integration": "NODE_ENV=test mocha test/setup.js test/integration/**/*.js --timeout 10000 --exit",
-    "test:integration:auth": "NODE_ENV=test mocha test/setup.js test/integration/authTest.js --timeout 10000 --exit",
+    "test:integration:auth": "cross-env NODE_ENV=test mocha test/setup.js test/integration/authTest.js --timeout 10000 --exit",
     "mongo": "mongosh"
   },
   "repository": {
