--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "redis": "^5.8.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "winston": "^3.18.3",
+    "winston-daily-rotate-file": "^5.0.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
