--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:unit:cart": "cross-env NODE_ENV=test:unit mocha  --no-config test/unit/cartTest.js --timeout 5000 --exit",
     "test:integration:cart": "cross-env NODE_ENV=test:unit mocha  --no-config test/integration/cartTest.js --timeout 5000 --exit",
     "test:unit:order": "cross-env NODE_ENV=test:unit mocha  --no-config test/unit/orderTest.js --timeout 5000 --exit",
-    "test:integration:order": "cross-env NODE_ENV=test:unit mocha  --no-config test/integration/orderTest.js --timeout 5000 --exit",
+    "test:integration:order": "cross-env NODE_ENV=test:unit mocha test/integration/orderTest.js --timeout 5000 --exit",
     "test:unit:auth": "cross-env NODE_ENV=test:unit mocha test/setup.js test/unit/authTest.js --timeout 5000 --exit",
     "test:integration": "NODE_ENV=test mocha test/setup.js test/integration/**/*.js --timeout 10000 --exit",
     "test:integration:auth": "cross-env NODE_ENV=test mocha test/setup.js test/integration/authTest.js --timeout 10000 --exit",
@@ -32,6 +32,7 @@
   },
   "homepage": "https://github.com/AsforDounia/E-Market-API#readme",
   "dependencies": {
+    "@faker-js/faker": "^10.1.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "cross-env": "^10.1.0",
