Ajout de la validation avec Yup pour la création et la modification des coupons, mise en place des tests unitaires et d'integration pour les coupons et correstion de erreurs dans les tests des commandes

--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
     "migrate": "node migrations/migrate.js",
     "seed": "node migrations/seed.js",
     "reset": "node migrations/reset-db.js",
-    "test": "NODE_ENV=test mocha test/setup.js test/**/*.test.js --timeout 5000 --exit",
-    "test:unit": "cross-env NODE_ENV=test:unit mocha test/setup.js test/unit/**/*.js --timeout 5000 --exit",
-    "test:unit:cart": "cross-env NODE_ENV=test:unit mocha  --no-config test/unit/cartTest.js --timeout 5000 --exit",
-    "test:integration:cart": "cross-env NODE_ENV=test:unit mocha  --no-config test/integration/cartTest.js --timeout 5000 --exit",
-    "test:unit:order": "cross-env NODE_ENV=test:unit mocha  --no-config test/unit/orderTest.js --timeout 5000 --exit",
-    "test:integration:order": "cross-env NODE_ENV=test:unit mocha test/integration/orderTest.js --timeout 5000 --exit",
-    "test:unit:auth": "cross-env NODE_ENV=test:unit mocha test/setup.js test/unit/authTest.js --timeout 5000 --exit",
-    "test:integration": "NODE_ENV=test mocha test/setup.js test/integration/**/*.js --timeout 10000 --exit",
+    "test": "cross-env test mocha test/setup.js test/**/*.test.js --timeout 5000 --exit",
+    "test:unit": "cross-env NODE_ENV=test mocha test/setup.js test/unit/**/*.js --timeout 5000 --exit",
+    " ": "cross-env NODE_ENV=test mocha  --no-config test/unit/cartTest.js --timeout 5000 --exit",
+    "test:integration:cart": "cross-env NODE_ENV=test mocha  --no-config test/setup.js test/integration/cartTest.js --timeout 5000 --exit",
+    "test:unit:cart": "cross-env NODE_ENV=test mocha  --no-config test/setup.js test/unit/cartTest.js --timeout 5000 --exit",
+    "test:unit:order": "cross-env NODE_ENV=test mocha  --no-config test/setup.js test/unit/orderTest.js --timeout 5000 --exit",
+    "test:unit:coupon": "cross-env NODE_ENV=test mocha  --no-config test/setup.js test/unit/couponTest.js --timeout 5000 --exit",
+    "test:integration:coupon": "cross-env NODE_ENV=test mocha  --no-config test/setup.js test/integration/couponTest.js --timeout 20000 --exit",
+    "test:integration:order": "cross-env NODE_ENV=test mocha test/setup.js test/integration/orderTest.js --timeout 15000 --exit",
+    "test:unit:auth": "cross-env NODE_ENV=test mocha test/setup.js test/unit/authTest.js --timeout 5000 --exit",
+    "test:integration": "cross-env NODE_ENV=test mocha test/setup.js test/integration/**/*.js --timeout 10000 --exit",
     "test:integration:auth": "cross-env NODE_ENV=test mocha test/setup.js test/integration/authTest.js --timeout 10000 --exit",
-    "test:unit:product": "cross-env NODE_ENV=test:unit mocha --no-config test/unit/productTest.js --timeout 5000 --exit",
+    "test:unit:product": "cross-env NODE_ENV=test mocha --no-config test/unit/productTest.js --timeout 5000 --exit",
     "test:integration:product": "cross-env NODE_ENV=test mocha --no-config test/setup.js test/integration/productTest.js --timeout 10000 --exit",
-    "test:unit:notification": "cross-env NODE_ENV=test:unit mocha --no-config test/unit/notificationTest.js --timeout 5000 --exit",
+    "test:unit:notification": "cross-env NODE_ENV=test mocha --no-config test/unit/notificationTest.js --timeout 5000 --exit",
     "test:integration:notification": "cross-env NODE_ENV=test mocha --no-config test/setup.js test/integration/notificationTest.js --timeout 10000 --exit",
     "mongo": "mongosh"
   },
