--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test:integration:notification": "cross-env NODE_ENV=test mocha --no-config test/setup.js test/integration/notificationTest.js --timeout 10000 --exit",
     "test:unit:log": "cross-env NODE_ENV=test:unit mocha --no-config test/unit/logTest.js --timeout 5000 --exit",
     "test:integration:log": "cross-env NODE_ENV=test mocha --no-config test/setup.js test/integration/logTest.js --timeout 10000 --exit",
+    "coverage": "cross-env NODE_ENV=test c8 --reporter=html --reporter=text --reporter=lcov mocha test/setup.js test/integration/**/*.js --timeout 10000 --exit",
     "mongo": "mongosh"
   },
   "repository": {
@@ -63,11 +64,13 @@
   "devDependencies": {
     "@eslint/js": "^9.38.0",
     "@faker-js/faker": "^10.1.0",
+    "c8": "^10.1.3",
     "chai": "^6.2.0",
     "eslint": "^9.38.0",
     "globals": "^16.4.0",
     "mocha": "^11.7.4",
     "nodemon": "^3.1.10",
+    "nyc": "^17.1.0",
     "sinon": "^21.0.0",
     "supertest": "^7.1.4"
   }
