--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,15 +51,10 @@ services:
             context: .
             dockerfile: Dockerfile
         container_name: emarket_api
+        env_file:
+            - .env.production
         ports:
             - "3000:3000"
-        environment:
-            - NODE_ENV=development
-            - PORT=3000
-            - MONGO_URI=mongodb://mongo:27017/emarket_3?replicaSet=rs0
-            - JWT_SECRET=${JWT_SECRET}
-            - REDIS_HOST=redis
-            - REDIS_PORT=6379
         volumes:
             - ./uploads:/app/uploads
             - ./logs:/app/logs
