feat: Enhance performance optimization and monitoring features  - Updated Dockerfile to install all dependencies for development. - Modified .dockerignore to exclude node_modules. - Improved MongoDB connection settings with connection pooling and profiling. - Implemented pagination for order retrieval with metadata in response. - Added Redis caching middleware with hit/miss tracking. - Created performance monitoring routes and controllers to track response times and cache statistics. - Added indexes to Notification, Order, Product, and User models for improved query performance. - Introduced a performance optimization plan document outlining implemented and future enhancements. - Updated package.json with new scripts for performance checks.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -63,7 +63,18 @@ services:
     volumes:
       - ./uploads:/app/uploads
       - ./logs:/app/logs
-      - ./src:/app/src  # Hot reload pour le dev
+      - ./src:/app/src
+      - ./controllers:/app/controllers
+      - ./routes:/app/routes
+      - ./middlewares:/app/middlewares
+      - ./models:/app/models
+      - ./services:/app/services
+      - ./config:/app/config
+      - ./server.js:/app/server.js
+      - ./swagger:/app/swagger
+      - ./migrations:/app/migrations
+      # Exclude node_modules to prevent platform conflicts
+    command: npm run dev
     depends_on:
       mongo:
         condition: service_healthy
