--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -57,6 +57,7 @@ services:
       - NODE_ENV=development
       - PORT=3000
       - MONGO_URI=mongodb://mongo:27017/emarket_3?replicaSet=rs0
+      - MONGO_URI_TEST=mongodb://localhost:27017/emarket_test_3?replicaSet=rs0&directConnection=true
       - JWT_SECRET=${JWT_SECRET}
       - REDIS_HOST=redis
       - REDIS_PORT=6379
