Add workflow_call trigger to lint workflow

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main, Dounia, mohamed, souadBranch ]
   pull_request:
     branches: [ main ]
+  workflow_call:
 
 jobs:
   eslint:
