--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,41 +63,14 @@ jobs:
         uses: actions/checkout@v4
       
       # Option 1: Deploy to Heroku
-      - name: Deploy to Heroku (optional)
-        if: false  # Enable by setting to true
+      - name: Deploy to Heroku
+        if: true  # Enabled
         uses: akhileshns/heroku-deploy@v3.13.15
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
           heroku_email: ${{ secrets.HEROKU_EMAIL }}
           usedocker: true
-      
-      # Option 2: Deploy to AWS ECS (example)
-      - name: Deploy to AWS ECS (optional)
-        if: false  # Enable by setting to true
-        run: |
-          echo "Configure AWS ECS deployment here"
-          # aws ecs update-service --cluster your-cluster --service your-service --force-new-deployment
-      
-      # Option 3: Deploy to DigitalOcean (example)
-      - name: Deploy to DigitalOcean (optional)
-        if: false  # Enable by setting to true
-        run: |
-          echo "Configure DigitalOcean App Platform deployment here"
-      
-      # Option 4: Deploy using Docker Compose on VPS
-      - name: Deploy to VPS via SSH (optional)
-        if: false  # Enable by setting to true
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USERNAME }}
-          key: ${{ secrets.VPS_SSH_KEY }}
-          script: |
-            cd /path/to/app
-            docker-compose pull
-            docker-compose up -d --force-recreate
-  
   smoke-tests:
     needs: deploy
     runs-on: ubuntu-latest
@@ -108,11 +81,11 @@ jobs:
       
       - name: Health check
         run: |
-          curl -f https://your-api-url.com/health || exit 1
+          curl -f https://emarketapi3-ff5141fc1066.herokuapp.com/ || exit 1
       
       - name: API smoke test
         run: |
-          response=$(curl -s -o /dev/null -w "%{http_code}" https://your-api-url.com/api/v1/health)
+          response=$(curl -s -o /dev/null -w "%{http_code}" https://emarketapi3-ff5141fc1066.herokuapp.com/api/v2/performance/health)
           if [ $response -ne 200 ]; then
             echo "❌ Smoke test failed with status code: $response"
             exit 1
