Refactor Heroku deployment process to use Container Registry; install Heroku CLI and update deployment steps

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,15 +62,28 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      # Option 1: Deploy to Heroku
-      - name: Deploy to Heroku
-        if: true  # Enabled
-        uses: akhileshns/heroku-deploy@v3.13.15
-        with:
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
-          heroku_email: ${{ secrets.HEROKU_EMAIL }}
-          usedocker: true
+      # Deploy to Heroku using Container Registry
+      - name: Install Heroku CLI
+        run: curl https://cli-assets.heroku.com/install.sh | sh
+      
+      - name: Login to Heroku Container Registry
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        run: |
+          echo $HEROKU_API_KEY | docker login --username=_ --password-stdin registry.heroku.com
+      
+      - name: Build and Push to Heroku
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        run: |
+          docker build -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web .
+          docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
+      
+      - name: Release to Heroku
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        run: |
+          heroku container:release web --app ${{ secrets.HEROKU_APP_NAME }}
   smoke-tests:
     needs: deploy
     runs-on: ubuntu-latest
