--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,15 +2,18 @@ name: Deploy
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main , Dounia]
   workflow_dispatch:
 
 jobs:
   lint:
     uses: ./.github/workflows/lint.yml
   
+  test:
+    uses: ./.github/workflows/test.yml
+  
   build-and-push:
-    needs: [lint]
+    needs: [lint, test]
     runs-on: ubuntu-latest
     
     steps:
